# dagster-dbt-snowflake

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.code-server  README.md  dagster.yaml  docker-compose.yml  env  gen_doc_stubs.py  index.html  mkdocs.yml  pyproject.toml  workspace.yaml
.deployment/: api_test.py  deploy.ps1  pod_status.ps1  snowflake_setup.sql
.github/workflows/: static.yml
.scripts/: deploy.ps1  forward_ports.ps1  helm_init.ps1  helm_template.yaml  snowflake_setup.sql  webhook_test.py
analyses/snowpark/astaus/: config.py  model_inference.sql  user_defined_functions.ipynb
data_platform/: definitions.py
data_platform/config/: __init__.py  environments.py
data_platform/defs/_azureml/: definitions.py
data_platform/defs/_powerbi/: definitions.py
data_platform/defs/dbt/: constants.py  definitions.py  factory.py  translator.py
data_platform/defs/dlthub/: factory.py  resources.py  translator.py
data_platform/defs/sling/: definitions.py  factory.py  translator.py
data_platform/defs/snowpark/: resources.py
data_platform/lib/dbt/: __init__.py  constants.py  translator.py
data_platform/lib/dlthub/: __init__.py  translator.py
data_platform/lib/sling/: __init__.py  translator.py
data_platform/utils/: automation_conditions.py  helpers.py  keyvault_stub.py  secrets.py
dbt/: README.md  dbt_project.yml  packages.yml  profiles.yml
dbt/analyses/marketing/: test.sql
dbt/artifacts_prod/: manifest.json
dbt/defer/: manifest.json
dbt/groups/: data_foundation.yml  marketing.yml
dbt/macros/: generate_database_name.sql
dbt/macros/column_macros/: dlt_loaded_at.sql  generate_sid.sql  pii_macros.sql  pst_to_utc.sql
dbt/macros/control/: apply_dynamic_data_mask.sql  generate_alias_name.sql  generate_schema_name.sql
dbt/macros/dbt_override/: generate_alias_name.sql  generate_schema_name.sql
dbt/macros/masking_policies/: masking_policy.sql
dbt/models/: __groups.yaml
dbt/seeds/marketing/: dim_marketing__dim_campaign_details.yml
dbt/seeds/mrt_marketing/: dim_marketing__dim_campaign_details.csv
dbt/snapshots/accounts_db/: snp_accounts_db__accounts.yml  snp_accounts_db__accounts_snapshot.yml
dbt/snapshots/transaction_db/: snp_transaction_db__transactions_snapshot.yml
dbt/state/: manifest.json  run_results.json
dbt/state/ephemeral/: src_accounts_db__src_accounts.sql
dbt/state/generic_tests/: accepted_range_fct_common__fct_4401218318602f381eaaf3f49b27b3ff.sql  accepted_range_fct_common__fct_775386e4f031bf6c806434bb27d3e4b0.sql  accepted_range_fct_common__fct_7a462bffce9f7cc47a4cd8bd0b819566.sql  accepted_range_fct_common__fct_c0b0b034e33414cdb081aa30725b5be7.sql  accepted_values_stg_adobe_experience__hits_hit_source__web__app.sql  not_null_fct_common__fct_transaction_loaded_at.sql  not_null_fct_common__fct_transaction_product_id.sql  not_null_fct_common__fct_transaction_transaction_id.sql  not_null_fct_common__fct_transaction_transaction_margin.sql  not_null_fct_common__fct_transaction_transaction_revenue.sql  not_null_fct_common__fct_transactions__loaded_at.sql  not_null_fct_common__fct_transactions_product_id.sql  not_null_fct_common__fct_transactions_transaction_id.sql  not_null_fct_common__fct_transactions_transaction_margin.sql  not_null_fct_common__fct_transactions_transaction_revenue.sql  not_null_stg_accounts_db__accounts__loaded_at.sql  not_null_stg_accounts_db__accounts_pii_loaded_at.sql  primary_key_stg_accounts_db__a_74f0b5b4c3430c49b2f2ae7658fe54dc.sql
dbt/state/run/: accepted_range_fct_common__fct_4401218318602f381eaaf3f49b27b3ff.sql  accepted_range_fct_common__fct_775386e4f031bf6c806434bb27d3e4b0.sql  accepted_range_fct_common__fct_7a462bffce9f7cc47a4cd8bd0b819566.sql  accepted_range_fct_common__fct_c0b0b034e33414cdb081aa30725b5be7.sql  accepted_values_stg_adobe_experience__hits_hit_source__web__app.sql  dim_common__dim_test.sql  dim_marketing__dim_campaign_details.sql  dim_marketing__dim_campaigns.sql  fct_common__fct_transaction.sql  fct_common__fct_transactions.sql  fct_marketing__fct_attribution.sql  fct_marketing__fct_attributions.sql  int_int_marketing__int_attribution_last_click_30d.sql  int_int_marketing__int_attribution_last_click_30d_same_brand.sql  int_int_marketing__int_attribution_last_click_30d_same_sku.sql  int_int_marketing__int_attributions.sql  not_null_fct_common__fct_transaction__loaded_at.sql  not_null_fct_common__fct_transaction_product_id.sql  not_null_fct_common__fct_transaction_transaction_id.sql  (+23 more)
docs/: gen_doc_stubs.py  index.html
docs/data_platform/: definitions.html  index.html
docs/docs/: Sling.md  dltHub.md  dlthub.md  index.md  setup.md  sling.md
docs/site/: 404.html  index.html  objects.inv  search.html
docs/source/: conf.py  index.rst
docs/template/: index.md
elt_core/: definitions.py  env.py
elt_core/defs/: automation_conditions.py  executor.py  helpers.py  sensors.py
elt_core/utils/: automation_conditions.py  helpers.py  keyvault_stub.py  load_assets.py  secrets.py  transaltor_helpers.py
html/elt_core/: definitions.html  index.html
(+384 files in other folders)
