[project]
name = "data_platform"
version = "0.1.0"
description = "Data platform demonstration that integrates dagster, dbt, sling, and dlt."
requires-python = ">=3.12,<3.13"
dependencies = [
        "dagster-cloud==1.11.2",
        "dagster-postgres==0.27.2",
        "dagster-k8s==0.27.2",
        "dagster-snowflake==0.27.2",
        "dagster-dbt==0.27.2",
        "dagster-dlt==0.27.2",
        "dagster-sling==0.27.2",
        "dbt-snowflake==1.10.0",
        "psutil",
        "snowflake>=1.6.0",
        "faker>=37.4.2",
        "snowflake-snowpark-python>=1.35.0",
]

[tool.setuptools.package-dir]
mypkg = "data_platform"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.dagster]
module_name = "data_platform.definitions"
code_location_name = "data_platform"

[tool.dg]
directory_type = "project"
project.root_module = "data_platform"


[dependency-groups]
dev = [
    "dagster-dg-cli>=1.11.2",
    "dagster-webserver>=1.11.2",
    "jupyter>=1.1.1",
    "pdoc3>=0.11.6",
    "sphinx>=8.2.3",
]
