[project]
name = "data_platform"
version = "0.1.0"
description = "Data platform demonstration that integrates dagster, dbt, sling, and dlt."
requires-python = ">=3.12,<3.13"
dependencies = [
    "dagster-cloud>=1.11.7",
    "dagster-dbt>=0.27.7",
    "dagster-dlt>=0.27.7",
    "dagster-k8s>=0.27.7",
    "dagster-postgres>=0.27.7",
    "dagster-sling>=0.27.7",
    "dagster-snowflake>=0.27.7",
    "faker>=37.6.0",
    "psutil>=7.0.0",
    "snowflake>=1.7.0",
    "snowflake-snowpark-python>=1.37.0",
]

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.11.7",
    "dagster-webserver>=1.11.7",
    "jupyter>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.30.0",
    "sphinx>=8.2.3",
    "sqlfluff>=3.4.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
mypkg = "data_platform"

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
quote-style = "double"
indent-style = "space"
[tool.ruff.lint]
select = [
    # pycodestyle, Pyflakes, pyupgrade, flake8-bugbear, flake8-simplify, isort
    "E",           "F",     "UP",       "B",            "SIM",          "I",
]

[tool.sqlfluff]
core.exclude_rules = ["AL07", "RF02", "ST06"]
core.max_line_length = 88
core.dialect = "snowflake"
indentation.tab_space_size = 4
layout.type.alias_expression.spacing_before = "align"
layout.type.alias_expression.align_within = "select_clause"
rules.aliasing.table.aliasing = "implicit"
rules.aliasing.column.aliasing = "implicit"

# # core.templater = "dbt"
# # templater.dbt.project_dir = "./dbt"
# # templater.dbt.profiles_dir = "./dbt"
# # experimental.format.executeInTerminal = true

[tool.dagster]
module_name = "data_platform.definitions"
code_location_name = "data_platform"

[tool.dg]
directory_type = "project"
project.root_module = "data_platform"

